tests/errors/syn_if11.java
public class syn_if11 {
public static void main(String[] args){
if true || false ) {
 
}
}
}